@@ -39,6 +39,7 @@ public:
 	// virtual methods
 	double Distance (double x, double y, Item **item) const;
 	void Draw (cairo_t *cr, bool is_vector) const;
+	void Move (double x, double y);
 	void UpdateBounds ();
 	void SetControlPoints (double x0, double y0, double x1, double y1, double x2, double y2, double x3, double y3);
 
