@@ -1,5 +1,9 @@
 ##Text encoding: utf-8
 
+2009-10-20  Jean Bréfort  <jean.brefort@normalesup.org>
+	* libs/gccv/bezier-arrow.cc: implement BezierArrow::Move()
+	* libs/gccv/bezier-arrow.h: ditto.
+
 2009-10-19  Jean Bréfort  <jean.brefort@normalesup.org>
 	* libs/gcp/application.cc: fixed color in tool buttons. [#27746]
 
